--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geoportal Tumaco - Manglares</title>
+    <title>Geoportal Consejo Comunitario Las Varas</title>
     
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -21,38 +21,71 @@
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            max-width: 300px;
         }
+        .layer-control { margin-bottom: 10px; }
     </style>
 </head>
 <body>
     <div class="sidebar">
-        <h3 style="margin-top: 0; color: #2c3e50;">Capas de Manglares</h3>
-        <div id="layerControl"></div>
+        <h3 style="margin-top: 0; color: #2c3e50;">Control de Capas</h3>
+        <div class="layer-control">
+            <label><input type="checkbox" id="cabo_manglar"> Cabo Manglar</label>
+        </div>
+        <div class="layer-control">
+            <label><input type="checkbox" id="consejo_las_varas"> Consejo Las Varas</label>
+        </div>
+        <div class="layer-control">
+            <label><input type="checkbox" id="cor_mangle"> Corredor Mangle</label>
+        </div>
+        <div class="layer-control">
+            <label><input type="checkbox" id="mangle_consejo"> Mangle Consejo</label>
+        </div>
+        <div class="layer-control">
+            <label><input type="checkbox" id="tumaco"> Área Tumaco</label>
+        </div>
+        <div class="layer-control">
+            <label><input type="checkbox" id="constricciones"> Constricciones</label>
+        </div>
     </div>
     <div id="map"></div>
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- Plugin Google Maps -->
-    <script src="https://unpkg.com/leaflet.googlemutant@latest/dist/leaflet.googlemutant.js"></script>
+    <script src="https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js"></script>
 
     <script>
-        // Configuración inicial del mapa (coordenadas de Tumaco)
+        // Configuración inicial del mapa
         var map = L.map('map').setView([1.8067, -78.7647], 12);
 
-        // Capas base
+        // Definición de mapas base
         var baseLayers = {
+            "OpenStreetMap": L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '© OpenStreetMap contributors'
+            }),
             "Google Satélite": L.gridLayer.googleMutant({
                 type: 'satellite',
                 maxZoom: 20
             }),
-            "Google Maps": L.gridLayer.googleMutant({
-                type: 'roadmap'
+            "Google Híbrido": L.gridLayer.googleMutant({
+                type: 'hybrid',
+                maxZoom: 20
             }),
-            "OpenStreetMap": L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '© OpenStreetMap'
+            "Google Terreno": L.gridLayer.googleMutant({
+                type: 'terrain',
+                maxZoom: 20
+            }),
+            "CartoDB Positron": L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
+                attribution: '© CartoDB'
+            }),
+            "CartoDB Dark Matter": L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png', {
+                attribution: '© CartoDB'
             })
         };
+
+        // Añadir capa base inicial
+        baseLayers["OpenStreetMap"].addTo(map);
 
         // Estilos para cada capa
         var geojsonStyles = {
@@ -64,15 +97,18 @@
             "constricciones": { color: "#d32f2f", weight: 4, opacity: 0.7 }
         };
 
-        // Función para cargar GeoJSONs
-        function loadGeoJSON(url, style) {
-            return fetch(url)
+        // Objeto para almacenar las capas
+        var layers = {};
+
+        // Función para cargar y mostrar capas
+        function loadLayer(layerName, style) {
+            fetch(`${layerName}.geojson`)
                 .then(response => response.json())
                 .then(data => {
-                    return L.geoJSON(data, {
+                    layers[layerName] = L.geoJSON(data, {
                         style: style,
                         onEachFeature: function(feature, layer) {
-                            let popupContent = `<b>${feature.properties.nombre || 'Capa'}</b>`;
+                            let popupContent = `<b>${feature.properties.nombre || layerName}</b>`;
                             if(feature.properties) {
                                 for(let key in feature.properties) {
                                     popupContent += `<br>${key}: ${feature.properties[key]}`;
@@ -81,39 +117,26 @@
                             layer.bindPopup(popupContent);
                         }
                     });
+                    document.getElementById(layerName).addEventListener('change', function(e) {
+                        if(e.target.checked) {
+                            layers[layerName].addTo(map);
+                        } else {
+                            map.removeLayer(layers[layerName]);
+                        }
+                    });
                 });
         }
 
         // Cargar todas las capas
-        Promise.all([
-            loadGeoJSON('Cabo_manglar.geojson', geojsonStyles.Cabo_manglar),
-            loadGeoJSON('Consejo_las_varas.geojson', geojsonStyles.Consejo_las_varas),
-            loadGeoJSON('Cor_mangle.geojson', geojsonStyles.Cor_mangle),
-            loadGeoJSON('Mangle_consejo.geojson', geojsonStyles.Mangle_consejo),
-            loadGeoJSON('Tumaco.geojson', geojsonStyles.Tumaco),
-            loadGeoJSON('constricciones.geojson', geojsonStyles.constricciones)
-        ]).then(layers => {
-            const overlayLayers = {
-                "Cabo Manglar": layers[0],
-                "Consejo Las Varitas": layers[1],
-                "Corredor Mangle": layers[2],
-                "Mangle Consejo": layers[3],
-                "Área Tumaco": layers[4],
-                "Constricciones": layers[5]
-            };
+        loadLayer('Cabo_manglar', geojsonStyles.Cabo_manglar);
+        loadLayer('Consejo_las_varas', geojsonStyles.Consejo_las_varas);
+        loadLayer('Cor_mangle', geojsonStyles.Cor_mangle);
+        loadLayer('Mangle_consejo', geojsonStyles.Mangle_consejo);
+        loadLayer('Tumaco', geojsonStyles.Tumaco);
+        loadLayer('constricciones', geojsonStyles.constricciones);
 
-            // Añadir control de capas
-            L.control.layers(baseLayers, overlayLayers, {
-                collapsed: false,
-                position: 'topright'
-            }).addTo(map);
-
-            // Añadir capa base inicial
-            baseLayers["Google Satélite"].addTo(map);
-        });
-
-        // Añadir escala
-        L.control.scale({ position: 'bottomleft' }).addTo(map);
+        // Añadir control de capas base
+        L.control.layers(baseLayers, null, { position: 'topright' }).addTo(map);
     </script>
 </body>
 </html>
