--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <style>
         #map { height: 500px; }
+        .leaflet-control-attribution {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 0 5px;
+            font-size: 11px;
+            background: rgba(255,255,255,0.7);
+        }
     </style>
 </head>
 <body>
@@ -19,7 +27,8 @@
         // Capas base
         var googleStreets = L.tileLayer('http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}', {
             maxZoom: 20,
-            subdomains: ['mt0', 'mt1', 'mt2', 'mt3']
+            subdomains: ['mt0', 'mt1', 'mt2', 'mt3'],
+            attribution: 'Map data &copy; <a href="https://www.google.com/maps/">Google Maps</a>'
         }).addTo(map);
 
         var esriSatellite = L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
@@ -75,6 +84,11 @@
         };
 
         L.control.layers(baseMaps, overlayMaps).addTo(map);
+
+        // Créditos
+        L.control.attribution({
+            prefix: 'Elaborado por Diego Castaño'
+        }).addTo(map);
     </script>
 </body>
 </html>
