--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
             font-size: 11px;
             background: rgba(255,255,255,0.7);
         }
+        #logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 401; /* Asegura que esté encima del mapa */
+            width: 100px; /* Ajusta el tamaño del logo */
+        }
     </style>
 </head>
 <body>
-    <div id="map"></div>
+    <img id="logo" src="URL_DE_TU_LOGO" alt="Logo"> <div id="map"></div>
 
     <script>
-        var map = L.map('map').setView([1.795, -78.825], 10); // Centrado en Tumaco con zoom 10
+        var map = L.map('map').setView([1.795, -78.825], 10);
 
-        // Capas base
         var googleStreets = L.tileLayer('http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}', {
             maxZoom: 20,
             subdomains: ['mt0', 'mt1', 'mt2', 'mt3'],
@@ -38,15 +44,55 @@
             attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
         });
 
-        // Capas GeoJSON
-        var caboManglar = L.geoJSON(null, { style: { color: 'red' } });
-        var consejoLasVaras = L.geoJSON(null, { style: { color: 'blue' } });
-        var corMangle = L.geoJSON(null, { style: { color: 'green' } });
-        var mangleConsejo = L.geoJSON(null, { style: { color: 'purple' } });
-        var tumaco = L.geoJSON(null, { style: { color: 'orange' } }).addTo(map); // Tumaco se agrega al mapa inicialmente
-        var constricciones = L.geoJSON(null, { style: { color: 'brown' } });
+        var caboManglar = L.geoJSON(null, { 
+            style: { color: 'red' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Cabo Manglar');
+                });
+            }
+        });
+        var consejoLasVaras = L.geoJSON(null, { 
+            style: { color: 'blue' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Consejo Las Varas');
+                });
+            }
+        });
+        var corMangle = L.geoJSON(null, { 
+            style: { color: 'green' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Cor Mangle');
+                });
+            }
+        });
+        var mangleConsejo = L.geoJSON(null, { 
+            style: { color: 'purple' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Mangle Consejo');
+                });
+            }
+        });
+        var tumaco = L.geoJSON(null, { 
+            style: { color: 'orange' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Tumaco');
+                });
+            }
+        }).addTo(map);
+        var constricciones = L.geoJSON(null, { 
+            style: { color: 'brown' },
+            onEachFeature: function (feature, layer) {
+                layer.on('click', function () {
+                    alert('Constricciones');
+                });
+            }
+        });
 
-        // Cargar datos GeoJSON (reemplaza con tus rutas reales)
         fetch('Cabo_manglar.geojson')
             .then(response => response.json())
             .then(data => caboManglar.addData(data));
@@ -71,7 +117,6 @@
             .then(response => response.json())
             .then(data => constricciones.addData(data));
 
-        // Control de capas
         var baseMaps = {
             "Google Streets": googleStreets,
             "Esri Satellite": esriSatellite
@@ -88,7 +133,6 @@
 
         L.control.layers(baseMaps, overlayMaps).addTo(map);
 
-        // Créditos
         L.control.attribution({
             prefix: 'Elaborado por Diego Castaño'
         }).addTo(map);
