--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            z-index: 401; /* Asegura que esté encima del mapa */
-            width: 100px; /* Ajusta el tamaño del logo */
+            z-index: 401;
+            width: 150px;
         }
     </style>
 </head>
 <body>
-    <img id="logo" src="URL_DE_TU_LOGO" alt="Logo"> <div id="map"></div>
+    <img id="logo" src="URL_DE_TU_IMAGEN_BI" alt="Logo de Biocomercio Sostenible">
+    <div id="map"></div>
 
     <script>
         var map = L.map('map').setView([1.795, -78.825], 10);
