--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <img id="logo" src="URL_DIRECTA_DE_TU_IMAGEN_BI" alt="Logo de Biocomercio Sostenible">
+    <img id="logo" src="https://github.com/diecas8/Las_varas/blob/main/Biocomercio.jpg" alt="Logo de Biocomercio Sostenible">
     <div id="map"></div>
 
     <script>
