--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
             font-size: 11px;
             background: rgba(255,255,255,0.7);
         }
-        #logo {
+        #title {
             position: absolute;
             top: 10px;
             left: 10px;
             z-index: 401;
-            width: 150px;
+            background: rgba(255,255,255,0.7);
+            padding: 5px;
         }
     </style>
 </head>
 <body>
-    <img id="logo" src="URL_DIRECTA_DE_TU_IMAGEN_BI" alt="Logo de Biocomercio Sostenible">
+    <div id="title">CORPORACIÓN BIOCOMERCIO SOSTENIBLE</div>
     <div id="map"></div>
 
     <script>
