--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         #legend {
             position: absolute;
             bottom: 10px;
-            right: 10px;
+            left: 10px;
             z-index: 401;
             background: rgba(255,255,255,0.8);
             padding: 10px;
@@ -99,7 +99,7 @@
         function onEachFeature(feature, layer) {
             layer.on('click', function (e) {
                 map.fitBounds(e.target.getBounds());
-                var popupContent = '<b>' + layer.feature.properties.name + '</b>'; // Reemplaza 'name' con el atributo correcto
+                var popupContent = '<b>' + layer.feature.properties.name + '</b>';
                 layer.bindPopup(popupContent).openPopup();
             });
         }
@@ -122,7 +122,7 @@
         L.control.attribution({ prefix: 'Elaborado por Diego Castaño' }).addTo(map);
 
         // Leyenda
-        var legend = L.control({ position: 'bottomright' });
+        var legend = L.control({ position: 'bottomleft' });
         legend.onAdd = function (map) {
             var div = L.DomUtil.create('div', 'legend');
             div.innerHTML += '<div class="legend-item"><div class="legend-color" style="background-color: red;"></div>Cabo Manglar</div>';
